--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-
+    <script src="script.js"></script>
     <title>AlfaTech</title>
   </head>
 
@@ -34,7 +34,7 @@
       <div class="container-links">
         <a href="#informacoes">INFORMAÇÕES</a>
         <a href="#planos">PLANOS</a>
-        <a href="#precos">PREÇOS</a>
+        <a href="preco.html">PREÇOS</a>
         <a href="#contato">CONTATO</a>
       </div>
     </div>
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div id="informacoes" class="informacoes"> <!-- Seção Informações da página -->
+    <div id="informacoes" class="informacoes fade-in-topo"> <!-- Seção Informações da página -->
       <h2>Existem diversos serviços de hospedagem de sites. Porque você deve <span>nos escolher?</span></h2>
       <div class="informacoes2">
         <section>
@@ -85,9 +85,10 @@
           <p>Suporte altamente treinado e especializado em soluções de Cloud...</p>
         </section>
       </div>
+    </div> 
       </div class="informacoes2">
 
-    <div id="planos" class="containertabela">
+    <div id="planos" class="containertabela fade-in-botton">
       <div class="planos"><!-- Planos -->
         <table>
           <h2>Pague <span>somente</span> pelo que for usar. Sem cobranças adicionais!</h2>
