--- a/preco.html
+++ b/preco.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-
+    <script src="script.js"></script>
     <title>AlfaTech</title>
   </head>
 
@@ -34,8 +34,9 @@
         <a href="index.html#contato">CONTATO</a>
       </div>
     </div>  
-    <div class="containertabela">
-        <div class="tabela">
+
+    <div class="containertabela fade-in-botton">
+        <div class="tabela tabela-responsive">
             <table>
                 <thead>
                     <tr>
@@ -89,59 +90,59 @@
                     </tr>
                     <tr>
                         <td class="col-esquerda">RELATÓRIO DE EMAILS</td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
                     </tr>
                     <tr>
                         <td class="col-esquerda">TRANSAÇÃO ILIMITADAS</td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
                     </tr>
                     <tr>
                         <td class="col-esquerda">RASTREADOR DE PAGAMENTO</td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
                     </tr>
                     <tr>
                         <td class="col-esquerda">EXPORTAÇÃO DE DADOS</td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
                     </tr>
                     <tr>
                         <td class="col-esquerda">CONVERSOR DE MOEDA</td>
                         <td></td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
                     </tr>
                     <tr>
                         <td class="col-esquerda">ACESSO A API</td>
                         <td></td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
                     </tr>
                     <tr>
                         <td class="col-esquerda">RESTRIÇÃO DE IP</td>
                         <td></td>
                         <td></td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
                     </tr>
                     <tr>
                         <td class="col-esquerda">FEED PERSONALIZADO</td>
                         <td></td>
                         <td></td>
-                        <td class="marcador-azul"></td>
-                        <td class="marcador-azul"></td>
+                        <td><div  class="marcador-azul"></div></td>
+                        <td><div  class="marcador-azul"></div></td>
                     </tr>
                     <tr>
                         <td class="col-esquerda">LIMITE DE IMPORTAÇÃO DE DADOS</td>
